fix the menu animation on mobile devices

--- a/Youssef/Code/style_abada.css
+++ b/Youssef/Code/style_abada.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
-body {
+body,html {
     margin: 0;
     overflow-x: hidden;
 }
@@ -435,12 +435,12 @@ h1.page-title {
         justify-items: center;
         position: absolute;
         top: 0;
-        right: -94%;
+        right: -104%;
         z-index: 10;
         background-color: white;
         font-size: 1.5em;
-        width: 90%;
-        max-height: 90%;
+        width: 100%;
+        max-height: 100%;
         box-shadow: #7C7C7C 3px 0 10px;
         padding-top: 140px;
     }
