--- a/html/style.css
+++ b/html/style.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
-body {
+body, html {
     margin: 0;
     overflow-x: hidden;
 }
@@ -141,12 +141,12 @@ body {
         justify-items: center;
         position: absolute;
         top: 0;
-        right: -94%;
+        right: -104%;
         z-index: 10;
         background-color: white;
         font-size: 1.5em;
-        width: 90%;
-        max-height: 90%;
+        width: 100%;
+        max-height: 100%;
         box-shadow: #7C7C7C 3px 0 10px;
         padding-top: 140px;
     }
@@ -183,5 +183,18 @@ body {
         position: relative;
         z-index: 11;
         cursor: pointer;
+    }
+
+    /* Footer style in mobile version */
+    .footer .row {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .footer .row .column {
+        justify-content: center;
+        align-items: center;
     }
  }
